fix spacing trainers

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -223,7 +223,6 @@ section {
 }
 
 .trainers {
-    overflow: auto;
     width: 100%;
     margin: 0 auto;
     display: flex;
